projects/compiler/test/typechecker/invocation/error_field_not_callable.out
Error at %FILE_NAME%:6:3
Cannot invoke target as function
  |  f.int(1)
       ^
Type 'Int' is not callable
