projects/compiler/test/typechecker/invocation/error_field_not_callable.abra
type Foo {
  int: Int
}

var f: Foo
f.int(1)
